--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,18 @@
 
+2020-08-22 Franz Holzinger <franz@ttproducts.de>
+    * renaming of table fields of mm tables:
+    * tt_products_mm_graduated_price:
+    product_uid ==> uid_local
+    graduated_price_uid ==> uid_foreign
+    productsort ==> sorting
+    graduatedsort ==> sorting_foreign
+    * tt_products_products_mm_articles:
+    articlesort ==>  sorting_foreign
+    * sys_products_orders_mm_tt_products:
+    sys_products_orders_uid ==> uid_local
+    tt_products_uid ==> uid_foreign
+
+    * bugfix for graduated prices: Remove the field items from table tt_products_graduated_price because TYPO3 does not support a backwards relation using a mm table.
 
 2020-07-10 Franz Holzinger <franz@ttproducts.de>
     * bugfix: The parent product must be shown on the top of the backend TCE of the article, if articleMode = 0.
