--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,7 @@
 
+2020-08-27 Franz Holzinger <franz@ttproducts.de>
+    * compatibility with tt_products 3.1.11: Marker ###ORDER_UID### will be replaced by the new marker ###ORDER_ORDER_NO###.
+
 2020-08-23 Franz Holzinger <franz@ttproducts.de>
     * bugfix issue #54: make the templateFile based on a plugin code
 
