--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
+
+
+
+2020-10-05 Franz Holzinger <franz@ttproducts.de>
+    * bugfix with discountprice: $k3 == 'type' is true with a value of 0.
+
 2020-09-22 Franz Holzinger <franz@ttproducts.de>
-    * bufixes: better support for error messages if a template file or its subpart has not been found. Configurations have been lost.
+    * bugfixes: better support for error messages if a template file or its subpart has not been found. Configurations have been lost.
 
 2020-08-27 Franz Holzinger <franz@ttproducts.de>
     * compatibility with tt_products 3.1.11: Marker ###ORDER_UID### will be replaced by the new marker ###ORDER_ORDER_NO###.
