--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
 2020-11-19 Franz Holzinger <franz@ttproducts.de>
+    * support for taxajax extension based on Middleware
     * bugfix issue #73: Trim the product title in the TCA and other fields.
 
 2020-10-09 Franz Holzinger <franz@ttproducts.de>
