--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+
+2020-11-25 Franz Holzinger <franz@ttproducts.de>
+    * bugfix: \JambageCom\TtProducts\Domain\Model\Dto\EmConfiguration is sometimes not found in the TCA folder, but only inside of Overrides
+    * compatibility 9: Replace ExtensionManagementUtility::siteRelPath by \TYPO3\CMS\Core\Utility\PathUtility::stripPathSitePrefix(           \TYPO3\CMS\Core\Utility\ExtensionManagementUtility::extPath(TT_PRODUCTS_EXT)
+
 2020-11-19 Franz Holzinger <franz@ttproducts.de>
     * support for taxajax extension based on Middleware
     * bugfix issue #73: Trim the product title in the TCA and other fields.
