--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2021-01-25 Franz Holzinger <franz@ttproducts.de>
+    * add and improve the Upgrade Wizards
+
 2020-12-28 Franz Holzinger <franz@ttproducts.de>
     * bugfix: The file EmConfiguration.php must be included in ext_localconf.php. The composer does not work at this position and inside of TCA files.
     * enhancement issue #75: support more email addresses by regexp
