--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@
 2021-01-29 Franz Holzinger <franz@ttproducts.de>
     * compatibility PHP 7.4: Curly braces as method to get individual characters inside of a string have been removed, 
     * compatibility TYPO3 10.4: add missing renderType to <type>select</type> in TCA flexform configuration. 
+    * compatibility TYPO3 10.4 deprecation 85445: Replace TemplateService->getFileName by TYPO3\CMS\Frontend\Resource\FilePathSanitizer object method sanitize.
 
 2021-01-25 Franz Holzinger <franz@ttproducts.de>
     * add and improve the Upgrade Wizards
