--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,7 @@
 
+2021-02-11 Franz Holzinger <franz@ttproducts.de>
+    * compatibility TYPO3 10.4: The $GLOBALS['TYPO3_CONF_VARS']['EXTCONF'][TT_PRODUCTS_EXT] array components must not have a trailing dot.
+
 2021-01-29 Franz Holzinger <franz@ttproducts.de>
     * compatibility PHP 7.4: Curly braces as method to get individual characters inside of a string have been removed, 
     * compatibility TYPO3 10.4: add missing renderType to <type>select</type> in TCA flexform configuration. 
