--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,8 @@
 
+
+2021-02-12 Franz Holzinger <franz@ttproducts.de>
+    * compatibility TYPO3 9.5, Deprecation: no. 85558: ContentObjectRenderer->enableFields must be replaced by another solution. \JambageCom\Div2007\Utility\TableUtility::enableFields
+
 2021-02-11 Franz Holzinger <franz@ttproducts.de>
     * compatibility TYPO3 10.4: The $GLOBALS['TYPO3_CONF_VARS']['EXTCONF'][TT_PRODUCTS_EXT] array components must not have a trailing dot.
 
