--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2021-03-03 Franz Holzinger <franz@ttproducts.de>
+    * compatibility TYPO3 9.5: replace $GLOBALS['TSFE']->loginUser by \JambageCom\Div2007\Utility\CompatibilityUtility::isLoggedIn().
+
 2021-02-27 Franz Holzinger <franz@ttproducts.de>
     * compatibility TYPO3 9.5: replace $GLOBALS['TSFE']->additionalHeaderData by $pageRenderer->addHeaderData.
 
