--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,8 @@
 
 
 2021-03-05 Franz Holzinger <franz@ttproducts.de>
-    * bugfix: $assetCollector->addJavaScript and $assetCollector->addInlineJavaScript are no useful replacements for $GLOBALS['TSFE']->setJS and $GLOBALS['TSFE']->additionalHeaderData.
+    * bugfix: $assetCollector->addInlineJavaScript is no useful replacement for $GLOBALS['TSFE']->additionalHeaderData.
+    * bugfix: $assetCollector->addInlineJavaScrip with ['priority' => true] is the replacement for $GLOBALS['TSFE']->setJS
 
 2021-03-04 Franz Holzinger <franz@ttproducts.de>
     * compatibility TYPO3 10.4: make a new TaxajaxController which does not initialize the front end
