--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+
+2021-03-10 Franz Holzinger <franz@ttproducts.de>
+    * bugfix issue #79: replace static class tx_ttproducts_static_info by calls of the \JambageCom\Div2007\Api\StaticInfoTablesApi class object $staticInfoApi.
+    * remove support for static_info_tables_taxes. Upgrade to version 2.13.2 or higher if you still need it.
+
 2021-03-10 Franz Holzinger <franz@ttproducts.de>
     * bugfix issue #78: removed $this->basket must not be used any more.
 
