--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 
 
+2021-03-25 Franz Holzinger <franz@ttproducts.de>
+    * bugfix issue #81: The replacement of the fields of table tt_products_mm_graduated_price is sometimes missing. product_uid ==> uid_local
+    graduated_price_uid ==> uid_foreign
+
 2021-03-22 Franz Holzinger <franz@ttproducts.de>
     * bugfix issue #80: The orderArray must be initialized before usage.
 
