--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+2021-03-31 Franz Holzinger <franz@ttproducts.de>
+    * bugfix issue #83: TYPO3 loses the attachment of the email.
 
 2021-03-29 Franz Holzinger <franz@ttproducts.de>
     * TYPO3 9.5 deprecation no. 85389: Replace $GLOBALS['TSFE']->beUserLogin by $context->getPropertyFromAspect('backend.user', 'isLoggedIn').
