--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,6 @@
 
+2021-04-17 Franz Holzinger <franz@ttproducts.de>
+    * compatibility TYPO3 10: Fix issue  #86. Support FAL for table tt_products_language
 
 2021-04-16 Franz Holzinger <franz@ttproducts.de>
     * bugfix issue #84: Enabel the install tool migration wizards in the file ext_lcoalconf.php. ProductDatasheetUpdater and ProductImageUpdater have been missing.
