--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+2021-07-16 Franz Holzinger <franz@ttproducts.de>
+    * remove support for TYPO3 6.2
 
 2021-04-17 Franz Holzinger <franz@ttproducts.de>
     * compatibility TYPO3 10: Fix issue  #86. Support FAL for table tt_products_language
