--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2021-08-17 Franz Holzinger <franz@ttproducts.de>
+    * bugfix compatibility TYPO3 9.5 and 10.4: A USER_INT object must be used if the basket has been filled in in order not to use the page cache. ttp_basket
+
 2021-08-10 Franz Holzinger <franz@ttproducts.de>
     * fix issue #91: Add class name "singlelink" for link to single and "listlink" for link to list view.
 
