--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,8 @@
 
+
+2021-08-19 Franz Holzinger <franz@ttproducts.de>
+    * fix issue #87: Deprecationn no. 65790 says that also the marker ###STORAGE_PID### cannot be used any more in TCA.
+
 2021-08-18 Franz Holzinger <franz@ttproducts.de>
     * bugfix compatibility TYPO3 8.7: datasheet_uid must not be used.
     * bugfix: a NULL value would be recognized as undefined. The marker array must always contain an empty string and not a NULL value.
