--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
 2021-10-22 Franz Holzinger <franz@ttproducts.de>
+    * bugfix: ordered product list over backend hook
     * bugfix: Array and string offset access syntax with curly braces is deprecated in PHP 7.
     * remove support for PHP 5.
 
