--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
+2021-11-18 Franz Holzinger <franz@ttproducts.de>
+    * fix issue #97: Consider the fields alternative, description and title from sys_file_reference as well as from sys_file for the ALT Tags if they are not empty.
+
 2021-11-16 Franz Holzinger <franz@ttproducts.de>
-    * bugfix: Error case with wrong product uid in string form must show correct HTML formatted output.
+    * fix issue #100: Error case with wrong product uid in string form must show correctly HTML formatted output.
 
 2021-10-26 Franz Holzinger <franz@ttproducts.de>
     * bugfix compatibility TYPO3 10.4: FAL must always be used for TYPO3 10, no matter what has been configured for tt_products.
