--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2021-11-20 Franz Holzinger <franz@ttproducts.de>
+    * deprecations in TYPO3 10.4 and 11.5: TCA modifications
+
 2021-11-18 Franz Holzinger <franz@ttproducts.de>
     * fix issue #97: Consider the fields alternative, description and title from sys_file_reference as well as from sys_file for the ALT Tags if they are not empty.
 
