--- a/Resources/Private/Language/Modfunc/locallang_modfunc1_csh.xlf
+++ b/Resources/Private/Language/Modfunc/locallang_modfunc1_csh.xlf
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <xliff version="1.0" xmlns:t3="http://typo3.org/schemas/xliff">
-   <file source-language="en" datatype="plaintext" original="messages" date="2017-07-08T17:08:00Z" product-name="import">
+   <file source-language="en" datatype="plaintext" original="EXT:tt_products/Resources/Private/Language/Modfunc/locallang_modfunc1_csh.xlf" date="2017-07-08T17:08:00Z" product-name="import">
 		<header/>
 		<body>
 			<trans-unit id="tt_products.func1.moveItemsWizard">
