--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2021-12-04 Franz Holzinger <franz@ttproducts.de>
+    * compatibility issue #84: allow image upgrade wizard for TYPO3 9.5
+
 2021-11-26 Franz Holzinger <franz@ttproducts.de>
     * move and convert marker/locallang.xml into Resources/Private/Language/locallang_marker.xlf .
 
