--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2021-12-04 Franz Holzinger <franz@ttproducts.de>
+    * compatibility issue #84: allow image upgrade wizard for TYPO3 9.5.
+      Consider to use $GLOBALS['TYPO3_CONF_VARS']['EXTCONF']['tt_products']['imageFolder'] if set instead of 'uploads/pics'.
+
 2021-11-18 Franz Holzinger <franz@ttproducts.de>
     * fix issue #97: Consider the fields alternative, description and title from sys_file_reference as well as from sys_file for the ALT Tags if they are not empty.
 
