--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
-2021-12-18 Franz Holzinger <franz@ttproducts.de>
+2021-12-21 Franz Holzinger <franz@ttproducts.de>
     * Replace locallang XML files by the converted XLF files
     * Bugfix: piVar from former pibase object must not be used in the basket view
+    * Bugfix function module functions for TYPO3 10
 
 2021-12-04 Franz Holzinger <franz@ttproducts.de>
     * compatibility issue #84: allow image upgrade wizard for TYPO3 9.5.
